<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <LinearLayout
        style="@style/TitleNavigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_mine"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:clickable="true"
        android:background="@drawable/pressed_style">
        <ImageView
            android:id="@+id/img_portrait"
            android:layout_width="@dimen/mine_img_width"
            android:layout_height="@dimen/mine_img_width"
            android:layout_gravity="center_vertical"
            android:src="@drawable/avatar" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tx_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:text="@string/portrait"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <!-- 头像 -->
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_length"
                android:layout_height="@dimen/avatar_length"
                android:layout_gravity="center_vertical"
                android:src="@drawable/my_portrait"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/my_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:clickable="true"
        android:background="@drawable/pressed_style">
        <ImageView
            android:id="@+id/img_nickname"
            android:layout_width="@dimen/mine_img_width"
            android:layout_height="@dimen/mine_img_width"
            android:layout_gravity="center_vertical"
            android:src="@drawable/nickname" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tx_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/nickname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                android:text="@string/my_nickname" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:background="@drawable/pressed_style"
        android:id="@+id/my_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:id="@+id/img_sex"
            android:layout_width="@dimen/mine_img_width"
            android:layout_height="@dimen/mine_img_width"
            android:layout_gravity="center_vertical"
            android:src="@drawable/gender" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tx_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/sex"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_my_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:textSize="16sp"
                    android:text="@string/my_sex" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="3dp"
        android:clickable="true"
        android:background="@drawable/pressed_style">
        <ImageView
            android:id="@+id/img_birth"
            android:layout_width="@dimen/mine_img_width"
            android:layout_height="@dimen/mine_img_width"
            android:layout_gravity="center_vertical"
            android:src="@drawable/birthday" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tx_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/birth"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_my_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                android:text="@string/my_birth" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/room_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/pressed_style"
        android:clickable="true"
        android:drawableRight="@mipmap/setting_arrow"
        android:gravity="center_vertical"
        android:padding="11dp"
        android:text="@string/room_view"
        android:textColor="@color/black"
        android:textSize="16.0sp" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/pressed_style"
        android:clickable="true"
        android:drawableRight="@mipmap/setting_arrow"
        android:gravity="center_vertical"
        android:padding="11dp"
        android:text="@string/feedback"
        android:textColor="@color/black"
        android:textSize="16.0sp" />
    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/pressed_style"
        android:clickable="true"
        android:gravity="center"
        android:padding="11dp"
        android:text="@string/logout"
        android:textColor="@color/app_red"
        android:textSize="16.0sp" />
</LinearLayout>